--- a/style.css
+++ b/style.css
@@ -1,12 +1,41 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap");
 
 body {
 	background-color: #111111;
+	min-height: 100%;
 	font-family: "Roboto", sans-serif;
 	color: white;
+	text-align: center;
 }
 
 a {
 	text-decoration: none;
 	color: dodgerblue;
+}
+
+h1.name {
+	font-family: "Montserrat", sans-serif;
+	font-size: 40px;
+}
+
+.discord {
+	color: #7289da;
+}
+
+img {
+	padding: 10px;
+}
+
+img:hover {
+	width: 156px;
+	transition: width 0.3s;
+}
+
+img:not(:hover) {
+	width: 128px;
+	transition: width 0.5s;
+}
+
+footer {
+	font-size: 15px;
 }
