--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 	max-width: 500px;
 	min-height: 100%;
 	margin: auto;
-	
+	padding: 0px 10px;
+
 	background-color: black;
 	font-family: "Roboto", sans-serif;
 	color: white;
@@ -24,6 +25,10 @@ a {
 
 h1 {
 	font-size: 40px;
+}
+
+.center {
+	text-align: center;
 }
 
 .footer {
